force-app/src/objects/TR1__Debug_Log__c.object
<CustomObject>
    <description>Stores the log messages from Apex Classes</description>
    <fields>
        <fullName>TR1__Additional_Message__c</fullName>
        <label>Additional Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Alias_Id__c</fullName>
        <label>Alias Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>TR1__Application__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Availability</label>
        <referenceTo>TR1__Candidate_Availability__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Class_Name__c</fullName>
        <description>Name of class from which log was generated</description>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Contact Document record</inlineHelpText>
        <label>Contact Document</label>
        <referenceTo>TR1__ContactDocument__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to which this error/success message is related to</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Exception_Type__c</fullName>
        <description>Type of the Exception</description>
        <label>Exception Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Function_Name__c</fullName>
        <label>Function Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Log_Type__c</fullName>
        <description>Do check if the log message is for Success or for Error</description>
        <label>Log Type?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Message__c</fullName>
        <label>Success/Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Monitor_Bulk_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Monitor Bulk Job process record</inlineHelpText>
        <label>Monitor Bulk Job</label>
        <referenceTo>TR1__Monitor_Bulk_Job__c</referenceTo>
        <relationshipLabel>Debug Logs</relationshipLabel>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Stack_Trace_String__c</fullName>
        <label>Stack Trace String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Debug Log</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Class_Name__c</columns>
        <columns>TR1__Exception_Type__c</columns>
        <columns>TR1__Function_Name__c</columns>
        <columns>TR1__Log_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__Daxtra</fullName>
        <columns>NAME</columns>
        <columns>TR1__Message__c</columns>
        <columns>TR1__Log_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Daxtra</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>